# jrtrading

./: README.md  pyproject.toml
src/: __init__.py
src/jrtrading/: test.py  tradestation_data.py
