[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jrtrading"
version = "0.0.1"
authors = [
  { name="Jon Richards", email="jrseti@gmail.com" },
]
description = "Python trading utilities. Mainly Tradestation helpers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/jrseti/jrtrading"
"Bug Tracker" = "https://github.com/jrseti/ts_auth0/jrtrading"